etc/kubernetes/rng-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rng-svc
spec:
  ports:
    -
      port: 80
      targetPort: 8080
  selector:
    app: rng
