etc/kubernetes/webui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui-svc
spec:
  ports:
    -
      nodePort: 30000
      port: 80
      targetPort: 8080
  selector:
    app: webui
  type: NodePort
