etc/kubernetes/webui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  name: webui
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: webui-svc
