etc/kubernetes/rng-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rng
spec:
  ingress:
    -
      from:
        -
          podSelector:
            matchLabels:
              app: worker
      ports:
        - 
          port: 8080
  podSelector:
    matchLabels:
      app: rng
